--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>I2E-Bench Leaderboard</title>
+  <title>UI-I2E-Bench Leaderboard</title>
 
   <link rel="icon" href="https://images.emojiterra.com/google/noto-emoji/unicode-16.0/color/svg/1f3c6.svg" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" />
