--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
       <a href=""><img
           src="https://img.shields.io/badge/github-%23121011.svg?style=for-the-badge&logo=github&logoColor=white"
           alt="github" class="img-fluid" /></a>
-      <a href="assets/UI_E2I_Synth_Advancing_GUI_Grounding_with_Large_Scale_Instruction_Synthesis.pdf"><img
-          src="https://img.shields.io/badge/paper-b31b1b.svg?style=for-the-badge" alt="paper"
+      <a href="https://arxiv.org/abs/2504.11257"><img
+          src="https://img.shields.io/badge/arXiv-paper-b31b1b.svg?style=for-the-badge" alt="paper"
           class="img-fluid" /></a>
       <a href=""> <img src="https://img.shields.io/badge/Dataset-blue.svg?style=for-the-badge" alt="dataset"
           class="img-fluid" /></a>
@@ -77,7 +77,16 @@
       </div>
     </div>
 
-
+    <div id="container-fluid" class="d-flex flex-column align-items-center gap-4 mt-5">
+      <h3 class="text-center">Examples</h3>
+      <div class="inline-block mt-3 text-center">
+        <ul>
+            <br />
+            <img src="assets/imgs/example.png" alt="Benchmark Example" style="max-width: 85%; height: auto; margin-top: 5px;" />
+        </ul>
+      </div>
+    </div>
+    
 
     <div id="notes">
       <h3>Notes</h3>
@@ -102,17 +111,22 @@
 
     
     <!-- Citation -->
-    <!-- <div class="container-fluid d-flex flex-column align-items-center gap-4 mt-5">
-      <h3>Citation</h3> -->
-      <!-- <p class="text-muted">
+    <div class="container-fluid d-flex flex-column align-items-center gap-4 mt-5">
+      <h3>Citation</h3> 
+      <p class="text-muted">
         If you find this work useful, please consider citing:
-      </p> -->
-      <!-- <div class="bg-light border rounded p-3 w-75">
-        <code>
-          TODO
-        </code>
+      </p>
+      <div class="bg-light border rounded p-3 w-75">
+          <code>
+            @article{liu2025ui,<br>
+              &nbsp;&nbsp;&nbsp;&nbsp;title={UI-E2I-Synth: Advancing GUI Grounding with Large-Scale Instruction Synthesis},<br>
+              &nbsp;&nbsp;&nbsp;&nbsp;author={Liu, Xinyi and Zhang, Xiaoyi and Zhang, Ziyun and Lu, Yan},<br>
+              &nbsp;&nbsp;&nbsp;&nbsp;journal={arXiv preprint arXiv:2504.11257},<br>
+              &nbsp;&nbsp;&nbsp;&nbsp;year={2025}<br>
+            }
+          </code>      
       </div>
-    </div> -->
+    </div>
 
     <!-- Acknowledgement -->  
     <div id="acknowledgement">
